test/stg/error/dataCon1.stg
data Bool = True | False;
data Bool1 = True | False;
